Fixes metrics crash when a NSURLSession is created without a delegate

BUG=834401

Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I431f280cb95db8b924a826740590eeb8fb1c4399
Reviewed-on: https://chromium-review.googlesource.com/1021600
Reviewed-by: Misha Efimov <mef@chromium.org>
Commit-Queue: Andrei Kapishnikov <kapishnikov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552853}
Former-commit-id: ac571767ab0e49735c2f35b55b34b8afe6ced26b